# ChangeLog for gnome-extra/gnome2-user-docs
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome2-user-docs/Attic/ChangeLog,v 1.3 2002/07/29 05:25:20 spider Exp $

*gnome2-user-docs-2.0.0 (29 Jul 2002)
  29 Jul 2002; Spider <spider@gentoo.org> gnome2-user-docs-2.0.0.ebuild :
  new version out
  

gnome2-user-docs-1.93-r1 (30 Jun 2002)
  30 Jun 2002; Spider <spider@gentoo.org> gnome2-user-docs-1.93-r1.ebuild:
  fixed so it appears in yelp correctly, yey!
  
*gnome2-user-docs-1.93 (21 Jun 2002)
  21 Jun 2002; Spider <spider@gentoo.org> gnome2-user-docs-1.93.ebuild:
  for the first time this package builds, so here you are, a blazing set of documentation for all of you gnome2 fans ;)