@@ -1,0 +1,1 @@
+MD5 174d1e7d46fbaeb1e4e826c7d7d0c9f8 gnome2-user-docs-2.0.1.tar.bz2 3888344
