@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gnome2-user-docs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome2-user-docs/Attic/ChangeLog,v 1.3 2002/07/29 05:25:20 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome2-user-docs/Attic/ChangeLog,v 1.4 2002/09/14 23:00:03 spider Exp $
+
+
+*gnome2-user-docs-2.0.1 (14 Sep 2002)
+  14 Sep 2002; Spider <spider@gentoo.org> gnome2-user-docs-2.0.1.ebuild :
+  new version and yadda yadda
 
 *gnome2-user-docs-2.0.0 (29 Jul 2002)
   29 Jul 2002; Spider <spider@gentoo.org> gnome2-user-docs-2.0.0.ebuild :
